@@ -1,4 +1,4 @@
-#include "defs.h"
+#include "geo_incode_defs.h"
 datafile_rows_t ellipsoid_row_0[] = {"ellipsoid_code","ellipsoid_name","semi_major_axis","uom_code","inv_flattening","semi_minor_axis","ellipsoid_shape","remarks","information_source","data_source","revision_date","change_id","deprecated ",NULL};
 datafile_rows_t ellipsoid_row_1[] = {"7001","Airy 1830","6377563.396","9001","299.3249646","","1","Original definition is a=20923713, b=20853810 feet of 1796. 1/f is given to 7 decimal places. For the 1936 retriangulation OSGB defines the relationship of 10 feet of 1796 to the International metre through ([10^0.48401603]/10) exactly = 0.3048007491...","Ordnance Survey of Great Britain.","EPSG","2006-11-27","98.321  98.34 2006.932","0 ",NULL};
 datafile_rows_t ellipsoid_row_2[] = {"7002","Airy Modified 1849","6377340.189","9001","299.3249646","","1","OSGB Airy 1830 figure (ellipsoid code 7001) rescaled by 0.999965 to best fit the scale of the 19th century primary triangulation of Ireland.","\"The Irish Grid - A Description of the Co-ordinate Reference System\" published by Ordnance Survey of Ireland, Dublin and Ordnance Survey of Northern Ireland, Belfast.","EPSG","2003-06-27","98.321 2002.622","0 ",NULL};
